<resources>
    <string name="app_name">PaulKimInventoryApp</string>
    <string name="app_bar_title">Category: %1$s, Item %2$d of %3$d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add_category">Add Category</string>"
    <string name="add_item_name">Item Name</string>"
    <string name="add_item_desc">Item Description</string>"
    <string name="add_item_quantity">Item Quantity</string>"
    <string name="add_item_price">Item Price</string>"
    <string name="inventory_label">Inventory Items</string>
    <string name="save_button">Save</string>
    <string name="add_item_button">Add Item</string>
    <string name="add_item_title">Add Item</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="edit_item_name">Item Name</string>
    <string name="edit_item_desc">Item Description</string>
    <string name="edit_item_quantity">Item Quantity</string>
    <string name="edit_item_price">Item Price</string>
    <string name="item_added">Added Item</string>
    <string name="item_updated">Updated Item</string>
    <string name="item_deleted">Deleted Item</string>
    <string name="category_added">Added Category</string>
    <string name="category_updated">Updated Category</string>
    <string name="category_deleted">Deleted Category</string>
    <string name="category_notFound">Category not found</string>
    <string name="user_nameSign">"Enter your username and password"</string>
    <string name="username_hint">"Enter your username"</string>
    <string name="password_hint">"Enter your password"</string>
    <string name="email_hint">"Enter your email"</string>
    <string name="log_successful">Logged in Successfully!</string>
    <string name="sign_up">Sign Up!</string>
    <string name="save">Save"</string>
    <string name="cancel">Cancel"</string>
    <string name="delete">Delete"</string>
    <string name="edit">Edit"</string>
    <string name="category">Category"</string>
    <string name="item">Item"</string>
    <string name="name">Name"</string>
    <string name="description">Description"</string>
    <string name="quantity">Quantity"</string>
    <string name="price">Price"</string>
    <string name="import_questions">Import</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_item_category">Item Category</string>
    <string name="edit_item_category">Item Category</string>
    <string name="edit_item_id">Item ID</string>
    <string name="sms_title">SMS Permissions</string>
    <string name="sms_allow">Allow</string>
    <string name="sms_deny">Deny</string>
    <string name="login_channel_name">Login</string>
    <string name="login_channel_description">Login Notification</string>
    <string name="signup_channel_name">Signup</string>
    <string name="signup_channel_description">Signup Notification</string>
    <string name="category_channel_name">Category</string>
    <string name="category_channel_description">Category Notification</string>
    <string name="deleteCategory_channel_name">Category</string>
    <string name="deleteCategory_channel_description">Category Notification</string>
    <string name="item_channel_name">Item</string>
    <string name="item_channel_description">Item Notification</string>
    <string name="addItem_channel_name">Item</string>
    <string name="addItem_channel_description">Item Notification</string>
    <string name="deleteItem_channel_name">Item</string>
    <string name="deleteItem_channel_description">Item Notification</string>
    <string name="updateItem_channel_name">Item</string>
    <string name="updateItem_channel_description">Item Notification</string>
    <string name="item_search_hint">Search Item</string>
    <string name="sort_alphabetically">Sort Alphabetically</string>




</resources>