<!-- fragment_sign_up.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/item_dialog_layout">

    <EditText
        android:id="@+id/add_item_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Item Id"
        android:maxLines="1" />

    <EditText
        android:id="@+id/add_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_item_name"
        android:maxLines="1" />

    <EditText
        android:id="@+id/add_item_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_item_desc"
        android:maxLines="2" />

    <EditText
        android:id="@+id/add_item_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_item_quantity"
        android:inputType="number"
        android:maxLines="1" />

    <EditText
        android:id="@+id/add_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_item_price"
        android:inputType="numberDecimal"
        android:maxLines="1" />

</LinearLayout>
